--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,4 @@
-<h1>User#index</h1>
+<h1>Bonjour, <%= current_user.first_name %> </h1>
 <p>Find me in app/views/user/index.html.erb</p>
 
 # ajouts - bouton - login - logout - s'inscrire - home=index
